fix: Removing horizontal scroll

--- a/styles/global.css
+++ b/styles/global.css
@@ -64,6 +64,8 @@ html {
 
 body {
     background-color: var(--bg-color);
+    overflow-x: hidden;
+
 }
 
 h1,
